<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WelcomeActivity!</string>
    <string name="app_name">趣味分享</string>
    <string name="title_activity_main">趣味分享</string>
    <string name="buttom_home">首页</string>
    <string name="buttom_wall">心情墙</string>
    <string name="buttom_camera">照片</string>
    <string name="buttom_square">广场</string>
    <string name="buttom_me">我</string>
    <string name="choose_text">选择</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="personal_info">个人信息</string>
    <string name="diary">日记</string>
    <string name="fun_picture">趣味图片</string>
    <string name="soical">社交圈</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forgot_pwd_link">忘记密码?</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="reset_pwd">重置密码</string>
    <string name="get_local_phone">获取本机手机号</string>
    <string name="password_confirm">确认密码</string>
    <string name="register_tip">提示 \n带*项为必填项\n填写邮箱方便您找回密码以及了解更多信息</string>
    <string name="back">返回</string>
    <string name="input_email">请输入邮箱地址</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_nickname">请输入用户昵称</string>
    <string name="get_location_phone_num">获取本机号码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="get_captcha">获取验证</string>
    <string name="reget_captcha">重新获取验证</string>
    <string name="phone_auth">手机验证</string>
    <string name="finish">完成</string>
    <string name="input_captcha">请输入收到的验证码</string>
    <string name="submit_captcha">提交验证码</string>
    <string name="captcha">验证码</string>
    <string name="read_and_agree_request">已阅读并同意</string>
    <string name="terms_of_service">服务条款</string>
    <string name="count_captcha_eff">x秒后   可重新获得验证码</string>
    <string name="funny">趣味</string>
    <string name="homepage">主页</string>
    <string name="me">我</string>
    <string name="more">更多</string>
    <string name="nickname">昵称</string>
    <string name="exit_share_joy">退出趣味分享</string>
    <string name="share_joy">趣味分享 </string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="exit">退出</string>
	<string name="edit">编辑</string>
	<string name="save">保存</string>
	<string name="submit">提交</string>
	<string name="image_navigate_title">趣味图片制作</string>
	<string name="take_a_pic">拍照</string>
	<string name="get_pic_from_storage">从图库获取</string>
	
	<string name="drawer_open">打开图片处理菜单</string>
    <string name="drawer_close">关闭图片处理菜单</string>
    <string name="action_websearch">搜索</string>
    <string name="app_not_available">找不到应用</string>
    
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
</resources>