<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exit_layout"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="@string/exit_share_joy"
        android:textColor="#333"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="33dp" >

        <Button
            android:id="@+id/exitBtn0"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:onClick="exitbutton0"
            android:text="@string/yes"
            android:textColor="#333"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/exitBtn1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:onClick="exitbutton1"
            android:text="@string/no"
            android:textColor="#333"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>