<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="18.0sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/me_email"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/nickname"
                android:textColor="@android:color/black"
                android:textSize="18.0sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/me_nickname"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="@string/input_nickname"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textSize="18.0sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/me_phone"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:enabled="false"
                android:hint="@string/get_location_phone_num"
                android:inputType="phone"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/me_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:src="@drawable/add_my_img"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/shape_line" />

    <Button
        android:id="@+id/me_save_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@drawable/white_bg_selector"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="18.0sp" />

</LinearLayout>